# yamyam-mcp

./: README.md  pyproject.toml  server.py
src/yamyam_mcp/: __init__.py  resources.py  tools.py
